fixes path issues?

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
   <header class="post-header">
 
     <!-- Nav -->
-    <a href="{{site.url}}">
+    <a href="{{ site.url | prepend: site.baseurl }}/">
       <i style="color:#000" class="fas fa-home"></i>
       <br><br>
 
