--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="footer center">
-  <a href="{{ site.url | prepend: site.baseurl }}/about"><img src="{{ site.url | prepend: site.baseurl }}/assets/me.jpg" /></a>
+  <a href="/about"><img src="/assets/me.jpg" /></a>
     &copy; {{ site.time | date: '%Y' }}
   <br />
 
