--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <!-- Nav -->
-  <a href="{{ site.url | prepend: site.baseurl }}/">
+  <a href="/">
     <i style="color:#000" class="fas fa-home"></i>
     <br /><br
   /></a>
