--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Nav -->
-<a href="{{ site.url | prepend: site.baseurl }}/">
+<a href="/">
     <i style="color: #000;" class="fas fa-home"></i></a>
 <br /><br />
 
